# Monitium

./: .gitignore  Build.sh  CMakeLists.txt  README.md  build.py  build_macos.sh
container/: Containerfile  build.sh  enter.sh  run.sh
include/finance/: finance_manager.hpp
qml/screens/: Stream.qml  Transactions.qml
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  cross_build_windows.sh
src/: app_screen.cpp  main.cpp
src/finance/: finance_manager.cpp
src/include/: app_screen.hpp
src/include/finance/: budget.hpp  transaction.hpp
src/ui/: Launcher.qml
src/ui/screens/: Budget.qml  Note.qml
